[BE] hotfix: 경매 상세 페이지 가격 그래프 수정